@@ -1,11 +1,10 @@
 package it.pagopa.pn.deliverypush.generated.openapi.server.v1.dto;
 
-import it.pagopa.pn.deliverypush.exceptions.PnDeliveryPushExceptionCodes;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 
 class RequestRefusedDetailsTest {
 
@@ -14,41 +13,36 @@ class RequestRefusedDetailsTest {
     @BeforeEach
     void setUp() {
         details = new RequestRefusedDetails();
-        details.setErrors(Collections.singletonList(
-                PnDeliveryPushExceptionCodes.NotificationRefusedErrorCodeInt.FILE_NOTFOUND.getValue()
-        ));
+        details.setRefusalReasons(List.of(NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build()));
     }
 
     @Test
     void errors() {
         RequestRefusedDetails tmp = RequestRefusedDetails.builder()
-                .errors(Collections.singletonList(
-                        PnDeliveryPushExceptionCodes.NotificationRefusedErrorCodeInt.FILE_NOTFOUND.getValue()
-                ))
+                .refusalReasons(List.of(NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build()))
                 .build();
-        Assertions.assertEquals(tmp, details.errors(Collections.singletonList(
-                PnDeliveryPushExceptionCodes.NotificationRefusedErrorCodeInt.FILE_NOTFOUND.getValue()
-        )));
+        Assertions.assertEquals(tmp, details.refusalReasons(List.of(NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build())
+        ));
     }
 
     @Test
     void addErrorsItem() {
         RequestRefusedDetails tmp = new RequestRefusedDetails();
-        tmp.addErrorsItem(
-                PnDeliveryPushExceptionCodes.NotificationRefusedErrorCodeInt.FILE_NOTFOUND.getValue()
+        tmp.addRefusalReasonsItem(
+                NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build()
         );
         Assertions.assertEquals(details, tmp);
     }
 
     @Test
     void getErrors() {
-        Assertions.assertEquals(Collections.singletonList(PnDeliveryPushExceptionCodes.NotificationRefusedErrorCodeInt.FILE_NOTFOUND.getValue()), details.getErrors());
+        Assertions.assertEquals(List.of(NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build()), details.getRefusalReasons());
     }
 
     @Test
     void testEquals() {
         RequestRefusedDetails tmp = RequestRefusedDetails.builder()
-                .errors(Collections.singletonList(PnDeliveryPushExceptionCodes.NotificationRefusedErrorCodeInt.FILE_NOTFOUND.getValue()))
+                .refusalReasons(List.of(NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build()))
                 .build();
         Assertions.assertEquals(Boolean.TRUE, tmp.equals(details));
     }
